vtk-sys/vtk_c_wrapper/vtk_proxy.h

/* ----------------------------------------------------------------------------
 * This file was automatically generated by SWIG (http://www.swig.org).
 * Version 3.0.9
 *
 * This file is not intended to be easily readable and contains a number of
 * coding conventions designed to improve portability and efficiency. Do not make
 * changes to this file unless you know what you are doing--modify the SWIG
 * interface file instead.
 * ----------------------------------------------------------------------------- */
#ifndef _vtk_proxy_H_
#define _vtk_proxy_H_

/* -----------------------------------------------------------------------------
 * cproxy.swg
 *
 * Definitions of C specific preprocessor symbols for proxies.
 * ----------------------------------------------------------------------------- */

#ifndef SWIGIMPORT
# ifndef __GNUC__
#   define __DLL_IMPORT __declspec(dllimport)
# else
#   define __DLL_IMPORT __attribute__((dllimport)) extern
# endif
# if !defined (__WIN32__)
#   define SWIGIMPORT extern
# else
#   define SWIGIMPORT __DLL_IMPORT
# endif
#endif

#include <stdio.h>

typedef struct {
  void *obj;
  const char **typenames;
} SwigObj;


// special value indicating any type of exception like 'catch(...)'
#define SWIG_AnyException "SWIG_AnyException"

#include <setjmp.h>

SWIGIMPORT jmp_buf SWIG_rt_env;

SWIGIMPORT struct SWIG_exc_struct {
  int code;
  char *msg;
  SwigObj *klass;
} SWIG_exc;

SWIGIMPORT void SWIG_rt_try();
SWIGIMPORT int SWIG_rt_catch(const char *type);
SWIGIMPORT void SWIG_rt_throw(SwigObj *klass, const char * msg);
SWIGIMPORT int SWIG_rt_unhandled();
SWIGIMPORT void SWIG_rt_endtry();
SWIGIMPORT int SWIG_exit(int code);

#define SWIG_try \
  SWIG_rt_try(); \
  if ((SWIG_exc.code = setjmp(SWIG_rt_env)) == 0) 
#define SWIG_catch(type) else if (SWIG_rt_catch(#type))
#define SWIG_throw(klass) SWIG_rt_throw((SwigObj *) klass, 0);
#define SWIG_throw_msg(klass, msg) SWIG_rt_throw((SwigObj *) klass, msg);
#define SWIG_endtry else SWIG_rt_unhandled(); SWIG_rt_endtry();



#include <stdarg.h>

#define SWIG_MAKE_DELETE(Name,Obj) void Name(Obj *op1, ...) {\
  Obj *obj;\
  va_list vl;\
  va_start(vl, op1);\
  do {\
    obj = va_arg(vl, Obj *);\
    delete_##Obj(obj);\
  } while (obj);\
  va_end(vl);\
}

void free_output_cstr(char * carg1);

typedef SwigObj vtkObjectBase;

const char * vtkObjectBase_GetClassName(SwigObj * carg1);
int vtkObjectBase_IsA(vtkObjectBase * carg1, char const * carg2);
void vtkObjectBase_Delete(vtkObjectBase * carg1);
void vtkObjectBase_Print(SwigObj * carg1, SwigObj * carg2);
void vtkObjectBase_Register(vtkObjectBase * carg1, SwigObj * carg2);
void vtkObjectBase_UnRegister(vtkObjectBase * carg1, SwigObj * carg2);
/*aaaaaa*/SwigObj * vtkObjectBase_New();
int vtkObjectBase_IsTypeOf(char const * carg1);
char * vtkObjectBase_ToString(SwigObj * carg1);

typedef SwigObj vtkObject;

/*aaaaaa*/SwigObj * vtkObject_NewInstance(SwigObj * carg1);
#include <stdbool.h>
bool vtkObject_GetDebug(SwigObj * carg1);
void vtkObject_SetDebug(SwigObj * carg1, bool carg2);
const char * vtkObject_GetClassName(SwigObj * carg1);
int vtkObject_IsA(SwigObj * carg1, char const * carg2);
void vtkObject_Delete(SwigObj * carg1);
void vtkObject_Print(SwigObj * carg1, SwigObj * carg2);
void vtkObject_Register(SwigObj * carg1, SwigObj * carg2);
void vtkObject_UnRegister(SwigObj * carg1, SwigObj * carg2);

typedef SwigObj vtkAlgorithm;

/*aaaaaa*/SwigObj * vtkAlgorithm_GetOutputPort(SwigObj * carg1);
/*aaaaaa*/SwigObj * vtkAlgorithm_NewInstance(SwigObj * carg1);
bool vtkAlgorithm_GetDebug(SwigObj * carg1);
void vtkAlgorithm_SetDebug(SwigObj * carg1, bool carg2);
const char * vtkAlgorithm_GetClassName(SwigObj * carg1);
int vtkAlgorithm_IsA(SwigObj * carg1, char const * carg2);
void vtkAlgorithm_Delete(SwigObj * carg1);
void vtkAlgorithm_Print(SwigObj * carg1, SwigObj * carg2);
void vtkAlgorithm_Register(SwigObj * carg1, SwigObj * carg2);
void vtkAlgorithm_UnRegister(SwigObj * carg1, SwigObj * carg2);

typedef SwigObj vtkPolyDataAlgorithm;

/*aaaaaa*/SwigObj * vtkPolyDataAlgorithm_GetOutputPort(SwigObj * carg1);
/*aaaaaa*/SwigObj * vtkPolyDataAlgorithm_NewInstance(SwigObj * carg1);
bool vtkPolyDataAlgorithm_GetDebug(SwigObj * carg1);
void vtkPolyDataAlgorithm_SetDebug(SwigObj * carg1, bool carg2);
const char * vtkPolyDataAlgorithm_GetClassName(SwigObj * carg1);
int vtkPolyDataAlgorithm_IsA(SwigObj * carg1, char const * carg2);
void vtkPolyDataAlgorithm_Delete(SwigObj * carg1);
void vtkPolyDataAlgorithm_Print(SwigObj * carg1, SwigObj * carg2);
void vtkPolyDataAlgorithm_Register(SwigObj * carg1, SwigObj * carg2);
void vtkPolyDataAlgorithm_UnRegister(SwigObj * carg1, SwigObj * carg2);

typedef SwigObj vtkPolyDataMapper;

/*aaaaaa*/SwigObj * vtkPolyDataMapper_New();
void vtkPolyDataMapper_Delete(vtkPolyDataMapper * carg1);
void vtkPolyDataMapper_SetInputConnection(vtkPolyDataMapper * carg1, SwigObj * carg2);
/*aaaaaa*/SwigObj * vtkPolyDataMapper_GetOutputPort(SwigObj * carg1);
/*aaaaaa*/SwigObj * vtkPolyDataMapper_NewInstance(SwigObj * carg1);
bool vtkPolyDataMapper_GetDebug(SwigObj * carg1);
void vtkPolyDataMapper_SetDebug(SwigObj * carg1, bool carg2);
const char * vtkPolyDataMapper_GetClassName(SwigObj * carg1);
int vtkPolyDataMapper_IsA(SwigObj * carg1, char const * carg2);
void vtkPolyDataMapper_Print(SwigObj * carg1, SwigObj * carg2);
void vtkPolyDataMapper_Register(SwigObj * carg1, SwigObj * carg2);
void vtkPolyDataMapper_UnRegister(SwigObj * carg1, SwigObj * carg2);

typedef SwigObj vtkActor;

/*aaaaaa*/SwigObj * vtkActor_New();
void vtkActor_Delete(vtkActor * carg1);
void vtkActor_SetMapper(vtkActor * carg1, SwigObj * carg2);
/*aaaaaa*/SwigObj * vtkActor_NewInstance(SwigObj * carg1);
bool vtkActor_GetDebug(SwigObj * carg1);
void vtkActor_SetDebug(SwigObj * carg1, bool carg2);
const char * vtkActor_GetClassName(SwigObj * carg1);
int vtkActor_IsA(SwigObj * carg1, char const * carg2);
void vtkActor_Print(SwigObj * carg1, SwigObj * carg2);
void vtkActor_Register(SwigObj * carg1, SwigObj * carg2);
void vtkActor_UnRegister(SwigObj * carg1, SwigObj * carg2);

typedef SwigObj vtkConeSource;

/*aaaaaa*/SwigObj * vtkConeSource_New();
void vtkConeSource_Delete(vtkConeSource * carg1);
void vtkConeSource_SetHeight(SwigObj * carg1, double carg2);
double vtkConeSource_GetHeight(SwigObj * carg1);
void vtkConeSource_SetRadius(SwigObj * carg1, double carg2);
double vtkConeSource_GetRadius(SwigObj * carg1);
void vtkConeSource_SetResolution(SwigObj * carg1, int carg2);
int vtkConeSource_GetResolution(SwigObj * carg1);
void vtkConeSource_SetCenter(SwigObj * carg1, double carg2, double carg3, double carg4);
double * vtkConeSource_GetCenter_pvtkConeSource(SwigObj * carg1);
void vtkConeSource_GetCenter_pvtkConeSource_a3d(SwigObj * carg1, /*aaa*/ double * carg2);
void vtkConeSource_SetDirection(SwigObj * carg1, double carg2, double carg3, double carg4);
double * vtkConeSource_GetDirection(SwigObj * carg1);
void vtkConeSource_SetAngle(SwigObj * carg1, double carg2);
double vtkConeSource_GetAngle(SwigObj * carg1);
/*aaaaaa*/SwigObj * vtkConeSource_GetOutputPort(SwigObj * carg1);
/*aaaaaa*/SwigObj * vtkConeSource_NewInstance(SwigObj * carg1);
bool vtkConeSource_GetDebug(SwigObj * carg1);
void vtkConeSource_SetDebug(SwigObj * carg1, bool carg2);
const char * vtkConeSource_GetClassName(SwigObj * carg1);
int vtkConeSource_IsA(SwigObj * carg1, char const * carg2);
void vtkConeSource_Print(SwigObj * carg1, SwigObj * carg2);
void vtkConeSource_Register(SwigObj * carg1, SwigObj * carg2);
void vtkConeSource_UnRegister(SwigObj * carg1, SwigObj * carg2);

typedef SwigObj vtkRenderer;

/*aaaaaa*/SwigObj * vtkRenderer_New();
void vtkRenderer_Delete(SwigObj * carg1);
void vtkRenderer_AddActor(SwigObj * carg1, SwigObj * carg2);
void vtkRenderer_SetBackground(SwigObj * carg1, double carg2, double carg3, double carg4);
void vtkRenderer_SetBackground2(SwigObj * carg1, double carg2, double carg3, double carg4);
void vtkRenderer_SetGradientBackground(SwigObj * carg1, bool carg2);

typedef SwigObj vtkRenderWindow;

/*aaaaaa*/SwigObj * vtkRenderWindow_New();
void vtkRenderWindow_Delete(SwigObj * carg1);
void vtkRenderWindow_AddRenderer(SwigObj * carg1, SwigObj * carg2);
void vtkRenderWindow_SetSize(SwigObj * carg1, int carg2, int carg3);

typedef SwigObj vtkRenderWindowInteractor;

/*aaaaaa*/SwigObj * vtkRenderWindowInteractor_New();
void vtkRenderWindowInteractor_Delete(SwigObj * carg1);
void vtkRenderWindowInteractor_SetRenderWindow(SwigObj * carg1, SwigObj * carg2);
void vtkRenderWindowInteractor_Initialize(SwigObj * carg1);
void vtkRenderWindowInteractor_Start(SwigObj * carg1);
void vtkRenderWindowInteractor_SetInteractorStyle(vtkRenderWindowInteractor * carg1, SwigObj * carg2);
/*aaaaaa*/SwigObj * vtkRenderWindowInteractor_GetInteractorStyle(vtkRenderWindowInteractor * carg1);

typedef SwigObj vtkInteractorStyleTrackballCamera;

/*aaaaaa*/SwigObj * vtkInteractorStyleTrackballCamera_New();
void vtkInteractorStyleTrackballCamera_Delete(SwigObj * carg1);

typedef SwigObj vtkBoxWidget;

/*aaaaaa*/SwigObj * vtkBoxWidget_New();
void vtkBoxWidget_Delete(SwigObj * carg1);
void vtkBoxWidget_SetInteractor(vtkBoxWidget * carg1, SwigObj * carg2);
/*aaaaaa*/SwigObj * vtkBoxWidget_GetInteractor(vtkBoxWidget * carg1);
void vtkBoxWidget_PlaceWidget(SwigObj * carg1);
void vtkBoxWidget_SetPlaceFactor(vtkBoxWidget * carg1, double carg2);
double vtkBoxWidget_GetPlaceFactor(vtkBoxWidget * carg1);
void vtkBoxWidget_SetProp3D(vtkBoxWidget * carg1, SwigObj * carg2);
/*aaaaaa*/SwigObj * vtkBoxWidget_GetProp3D(vtkBoxWidget * carg1);
void vtkBoxWidget_On(SwigObj * carg1);
void vtkBoxWidget_Off(SwigObj * carg1);

#endif /* _vtk_proxy_H_ */