vtk-sys/src/ffi.rs

/* automatically generated by rust-bindgen */

#[repr(C)]
#[derive(Copy)]
pub struct Struct_Unnamed1 {
    pub obj: *mut ::std::os::raw::c_void,
    pub typenames: *mut *const ::std::os::raw::c_char,
}
impl ::std::clone::Clone for Struct_Unnamed1 {
    fn clone(&self) -> Self { *self }
}
impl ::std::default::Default for Struct_Unnamed1 {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
pub type SwigObj = Struct_Unnamed1;
#[repr(C)]
#[derive(Copy)]
pub struct Struct_SWIG_exc_struct {
    pub code: ::std::os::raw::c_int,
    pub msg: *mut ::std::os::raw::c_char,
    pub klass: *mut SwigObj,
}
impl ::std::clone::Clone for Struct_SWIG_exc_struct {
    fn clone(&self) -> Self { *self }
}
impl ::std::default::Default for Struct_SWIG_exc_struct {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
pub type vtkObjectBase = SwigObj;
pub type vtkObject = SwigObj;
pub type vtkAlgorithm = SwigObj;
pub type vtkPolyDataAlgorithm = SwigObj;
pub type vtkPolyDataMapper = SwigObj;
pub type vtkActor = SwigObj;
pub type vtkConeSource = SwigObj;
pub type vtkRenderer = SwigObj;
pub type vtkRenderWindow = SwigObj;
pub type vtkRenderWindowInteractor = SwigObj;
pub type vtkInteractorStyleTrackballCamera = SwigObj;
pub type vtkBoxWidget = SwigObj;
extern "C" {
    
    pub static mut SWIG_exc: Struct_SWIG_exc_struct;
}
extern "C" {
    pub fn SWIG_rt_try();
    pub fn SWIG_rt_catch(_type: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn SWIG_rt_throw(klass: *mut SwigObj,
                         msg: *const ::std::os::raw::c_char);
    pub fn SWIG_rt_unhandled() -> ::std::os::raw::c_int;
    pub fn SWIG_rt_endtry();
    pub fn SWIG_exit(code: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
    pub fn free_output_cstr(carg1: *mut ::std::os::raw::c_char);
    pub fn vtkObjectBase_GetClassName(carg1: *mut SwigObj)
     -> *const ::std::os::raw::c_char;
    pub fn vtkObjectBase_IsA(carg1: *mut vtkObjectBase,
                             carg2: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn vtkObjectBase_Delete(carg1: *mut vtkObjectBase);
    pub fn vtkObjectBase_Print(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkObjectBase_Register(carg1: *mut vtkObjectBase,
                                  carg2: *mut SwigObj);
    pub fn vtkObjectBase_UnRegister(carg1: *mut vtkObjectBase,
                                    carg2: *mut SwigObj);
    pub fn vtkObjectBase_New() -> *mut SwigObj;
    pub fn vtkObjectBase_IsTypeOf(carg1: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn vtkObjectBase_ToString(carg1: *mut SwigObj)
     -> *mut ::std::os::raw::c_char;
    pub fn vtkObject_NewInstance(carg1: *mut SwigObj) -> *mut SwigObj;
    pub fn vtkObject_GetDebug(carg1: *mut SwigObj) -> u8;
    pub fn vtkObject_SetDebug(carg1: *mut SwigObj, carg2: u8);
    pub fn vtkObject_GetClassName(carg1: *mut SwigObj)
     -> *const ::std::os::raw::c_char;
    pub fn vtkObject_IsA(carg1: *mut SwigObj,
                         carg2: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn vtkObject_Delete(carg1: *mut SwigObj);
    pub fn vtkObject_Print(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkObject_Register(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkObject_UnRegister(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkAlgorithm_GetOutputPort(carg1: *mut SwigObj) -> *mut SwigObj;
    pub fn vtkAlgorithm_NewInstance(carg1: *mut SwigObj) -> *mut SwigObj;
    pub fn vtkAlgorithm_GetDebug(carg1: *mut SwigObj) -> u8;
    pub fn vtkAlgorithm_SetDebug(carg1: *mut SwigObj, carg2: u8);
    pub fn vtkAlgorithm_GetClassName(carg1: *mut SwigObj)
     -> *const ::std::os::raw::c_char;
    pub fn vtkAlgorithm_IsA(carg1: *mut SwigObj,
                            carg2: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn vtkAlgorithm_Delete(carg1: *mut SwigObj);
    pub fn vtkAlgorithm_Print(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkAlgorithm_Register(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkAlgorithm_UnRegister(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkPolyDataAlgorithm_GetOutputPort(carg1: *mut SwigObj)
     -> *mut SwigObj;
    pub fn vtkPolyDataAlgorithm_NewInstance(carg1: *mut SwigObj)
     -> *mut SwigObj;
    pub fn vtkPolyDataAlgorithm_GetDebug(carg1: *mut SwigObj) -> u8;
    pub fn vtkPolyDataAlgorithm_SetDebug(carg1: *mut SwigObj, carg2: u8);
    pub fn vtkPolyDataAlgorithm_GetClassName(carg1: *mut SwigObj)
     -> *const ::std::os::raw::c_char;
    pub fn vtkPolyDataAlgorithm_IsA(carg1: *mut SwigObj,
                                    carg2: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn vtkPolyDataAlgorithm_Delete(carg1: *mut SwigObj);
    pub fn vtkPolyDataAlgorithm_Print(carg1: *mut SwigObj,
                                      carg2: *mut SwigObj);
    pub fn vtkPolyDataAlgorithm_Register(carg1: *mut SwigObj,
                                         carg2: *mut SwigObj);
    pub fn vtkPolyDataAlgorithm_UnRegister(carg1: *mut SwigObj,
                                           carg2: *mut SwigObj);
    pub fn vtkPolyDataMapper_New() -> *mut SwigObj;
    pub fn vtkPolyDataMapper_Delete(carg1: *mut vtkPolyDataMapper);
    pub fn vtkPolyDataMapper_SetInputConnection(carg1: *mut vtkPolyDataMapper,
                                                carg2: *mut SwigObj);
    pub fn vtkPolyDataMapper_GetOutputPort(carg1: *mut SwigObj)
     -> *mut SwigObj;
    pub fn vtkPolyDataMapper_NewInstance(carg1: *mut SwigObj) -> *mut SwigObj;
    pub fn vtkPolyDataMapper_GetDebug(carg1: *mut SwigObj) -> u8;
    pub fn vtkPolyDataMapper_SetDebug(carg1: *mut SwigObj, carg2: u8);
    pub fn vtkPolyDataMapper_GetClassName(carg1: *mut SwigObj)
     -> *const ::std::os::raw::c_char;
    pub fn vtkPolyDataMapper_IsA(carg1: *mut SwigObj,
                                 carg2: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn vtkPolyDataMapper_Print(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkPolyDataMapper_Register(carg1: *mut SwigObj,
                                      carg2: *mut SwigObj);
    pub fn vtkPolyDataMapper_UnRegister(carg1: *mut SwigObj,
                                        carg2: *mut SwigObj);
    pub fn vtkActor_New() -> *mut SwigObj;
    pub fn vtkActor_Delete(carg1: *mut vtkActor);
    pub fn vtkActor_SetMapper(carg1: *mut vtkActor, carg2: *mut SwigObj);
    pub fn vtkActor_NewInstance(carg1: *mut SwigObj) -> *mut SwigObj;
    pub fn vtkActor_GetDebug(carg1: *mut SwigObj) -> u8;
    pub fn vtkActor_SetDebug(carg1: *mut SwigObj, carg2: u8);
    pub fn vtkActor_GetClassName(carg1: *mut SwigObj)
     -> *const ::std::os::raw::c_char;
    pub fn vtkActor_IsA(carg1: *mut SwigObj,
                        carg2: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn vtkActor_Print(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkActor_Register(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkActor_UnRegister(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkConeSource_New() -> *mut SwigObj;
    pub fn vtkConeSource_Delete(carg1: *mut vtkConeSource);
    pub fn vtkConeSource_SetHeight(carg1: *mut SwigObj,
                                   carg2: ::std::os::raw::c_double);
    pub fn vtkConeSource_GetHeight(carg1: *mut SwigObj)
     -> ::std::os::raw::c_double;
    pub fn vtkConeSource_SetRadius(carg1: *mut SwigObj,
                                   carg2: ::std::os::raw::c_double);
    pub fn vtkConeSource_GetRadius(carg1: *mut SwigObj)
     -> ::std::os::raw::c_double;
    pub fn vtkConeSource_SetResolution(carg1: *mut SwigObj,
                                       carg2: ::std::os::raw::c_int);
    pub fn vtkConeSource_GetResolution(carg1: *mut SwigObj)
     -> ::std::os::raw::c_int;
    pub fn vtkConeSource_SetCenter(carg1: *mut SwigObj,
                                   carg2: ::std::os::raw::c_double,
                                   carg3: ::std::os::raw::c_double,
                                   carg4: ::std::os::raw::c_double);
    pub fn vtkConeSource_GetCenter_pvtkConeSource(carg1: *mut SwigObj)
     -> *mut ::std::os::raw::c_double;
    pub fn vtkConeSource_GetCenter_pvtkConeSource_a3d(carg1: *mut SwigObj,
                                                      carg2:
                                                          *mut ::std::os::raw::c_double);
    pub fn vtkConeSource_SetDirection(carg1: *mut SwigObj,
                                      carg2: ::std::os::raw::c_double,
                                      carg3: ::std::os::raw::c_double,
                                      carg4: ::std::os::raw::c_double);
    pub fn vtkConeSource_GetDirection(carg1: *mut SwigObj)
     -> *mut ::std::os::raw::c_double;
    pub fn vtkConeSource_SetAngle(carg1: *mut SwigObj,
                                  carg2: ::std::os::raw::c_double);
    pub fn vtkConeSource_GetAngle(carg1: *mut SwigObj)
     -> ::std::os::raw::c_double;
    pub fn vtkConeSource_GetOutputPort(carg1: *mut SwigObj) -> *mut SwigObj;
    pub fn vtkConeSource_NewInstance(carg1: *mut SwigObj) -> *mut SwigObj;
    pub fn vtkConeSource_GetDebug(carg1: *mut SwigObj) -> u8;
    pub fn vtkConeSource_SetDebug(carg1: *mut SwigObj, carg2: u8);
    pub fn vtkConeSource_GetClassName(carg1: *mut SwigObj)
     -> *const ::std::os::raw::c_char;
    pub fn vtkConeSource_IsA(carg1: *mut SwigObj,
                             carg2: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn vtkConeSource_Print(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkConeSource_Register(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkConeSource_UnRegister(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkRenderer_New() -> *mut SwigObj;
    pub fn vtkRenderer_Delete(carg1: *mut SwigObj);
    pub fn vtkRenderer_AddActor(carg1: *mut SwigObj, carg2: *mut SwigObj);
    pub fn vtkRenderer_SetBackground(carg1: *mut SwigObj,
                                     carg2: ::std::os::raw::c_double,
                                     carg3: ::std::os::raw::c_double,
                                     carg4: ::std::os::raw::c_double);
    pub fn vtkRenderer_SetBackground2(carg1: *mut SwigObj,
                                      carg2: ::std::os::raw::c_double,
                                      carg3: ::std::os::raw::c_double,
                                      carg4: ::std::os::raw::c_double);
    pub fn vtkRenderer_SetGradientBackground(carg1: *mut SwigObj, carg2: u8);
    pub fn vtkRenderWindow_New() -> *mut SwigObj;
    pub fn vtkRenderWindow_Delete(carg1: *mut SwigObj);
    pub fn vtkRenderWindow_AddRenderer(carg1: *mut SwigObj,
                                       carg2: *mut SwigObj);
    pub fn vtkRenderWindow_SetSize(carg1: *mut SwigObj,
                                   carg2: ::std::os::raw::c_int,
                                   carg3: ::std::os::raw::c_int);
    pub fn vtkRenderWindowInteractor_New() -> *mut SwigObj;
    pub fn vtkRenderWindowInteractor_Delete(carg1: *mut SwigObj);
    pub fn vtkRenderWindowInteractor_SetRenderWindow(carg1: *mut SwigObj,
                                                     carg2: *mut SwigObj);
    pub fn vtkRenderWindowInteractor_Initialize(carg1: *mut SwigObj);
    pub fn vtkRenderWindowInteractor_Start(carg1: *mut SwigObj);
    pub fn vtkRenderWindowInteractor_SetInteractorStyle(carg1:
                                                            *mut vtkRenderWindowInteractor,
                                                        carg2: *mut SwigObj);
    pub fn vtkRenderWindowInteractor_GetInteractorStyle(carg1:
                                                            *mut vtkRenderWindowInteractor)
     -> *mut SwigObj;
    pub fn vtkInteractorStyleTrackballCamera_New() -> *mut SwigObj;
    pub fn vtkInteractorStyleTrackballCamera_Delete(carg1: *mut SwigObj);
    pub fn vtkBoxWidget_New() -> *mut SwigObj;
    pub fn vtkBoxWidget_Delete(carg1: *mut SwigObj);
    pub fn vtkBoxWidget_SetInteractor(carg1: *mut vtkBoxWidget,
                                      carg2: *mut SwigObj);
    pub fn vtkBoxWidget_GetInteractor(carg1: *mut vtkBoxWidget)
     -> *mut SwigObj;
    pub fn vtkBoxWidget_PlaceWidget(carg1: *mut SwigObj);
    pub fn vtkBoxWidget_SetPlaceFactor(carg1: *mut vtkBoxWidget,
                                       carg2: ::std::os::raw::c_double);
    pub fn vtkBoxWidget_GetPlaceFactor(carg1: *mut vtkBoxWidget)
     -> ::std::os::raw::c_double;
    pub fn vtkBoxWidget_SetProp3D(carg1: *mut vtkBoxWidget,
                                  carg2: *mut SwigObj);
    pub fn vtkBoxWidget_GetProp3D(carg1: *mut vtkBoxWidget) -> *mut SwigObj;
    pub fn vtkBoxWidget_On(carg1: *mut SwigObj);
    pub fn vtkBoxWidget_Off(carg1: *mut SwigObj);
}
